<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_listen"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/exo_medium"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            />
        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
        <ImageView
            android:id="@+id/btnInfo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/exclamation"
            android:layout_marginStart="30dp"
            /></LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/dinleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/btnDinle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background_style2"
            android:fontFamily="@font/exo_medium"
            android:text="@string/btn_listentoWord"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/durdurLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/btnDinlemeyiDurdur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background_style2"
            android:fontFamily="@font/exo_medium"
            android:text="@string/btn_stopListen"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>
    </LinearLayout>
</LinearLayout>