<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".view.AddSaveFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mCardView"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/accent"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/leftarrow">

        </ImageView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_memoNotebook"
            android:textColor="@color/primary"
            android:textSize="26sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/eklemeMCardView"
        android:layout_below="@+id/mCardView"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/light_gray"
        app:strokeWidth="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <EditText
                    android:id="@+id/kaydedilecekText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="5"
                    android:background="@drawable/button_background_style"
                    android:hint="@string/txt_addWord"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text" />

                <ImageView
                    android:id="@+id/btnWriteWSpeech"
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/microphone64" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_background_style"
                android:fontFamily="@font/exo_medium"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/goruntuleMCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnClear"
        android:layout_below="@+id/eklemeMCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background_style"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/light_gray"
        app:strokeWidth="3dp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background_style"
        android:fontFamily="@font/exo_medium"
        android:text="@string/btn_clearList"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5522977588824109/6984169925" />
</RelativeLayout>





