<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".view.MenuFragment">

    <LinearLayout
        android:id="@+id/firstLn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">

        <ImageView
            android:layout_weight="1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/iiii"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/l"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/iii"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/secLn"
        android:layout_below="@+id/firstLn"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/txt_memoFriend"
            android:textColor="@color/light_gray"
            android:textSize="24sp" />

        <ImageView
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lll"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cwMenu"
        android:layout_below="@id/secLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray"
        app:cardBackgroundColor="@color/accent"
        app:cardCornerRadius="25dp"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ekleMCardView"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:elevation="10dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/primary"
                android:layout_centerHorizontal="true"
                app:strokeWidth="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/comment" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/exo_medium"
                        android:layout_marginStart="4dp"
                        android:text="@string/btn_wordSentenceAdd"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dinleMCardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ekleMCardView"
                android:layout_marginEnd="12dp"
                android:elevation="10dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/primary"
                app:strokeWidth="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/audiobook" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/exo_medium"
                        android:gravity="center"
                        android:text="@string/btn_listentoAdded"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ezberleMCardView"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/dinleMCardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:elevation="10dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/primary"
                app:strokeWidth="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/llll" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/exo_medium"
                        android:gravity="center"
                        android:text="@string/btn_startMemo"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txt_memoLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ezberleMCardView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/exo_medium"
                android:text="@string/txt_memolang"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_below="@+id/txt_memoLang"
                android:layout_centerHorizontal="true"
                android:popupBackground="@android:color/transparent"
                android:background="@drawable/style_spinner"/>
        </RelativeLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5522977588824109/7521557674" />

</RelativeLayout>